// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APD activities endpoint | PUT /activities/:id when authenticated as a user with permission with a non-existant activity ID 1`] = `undefined`;

exports[`APD activities endpoint | PUT /activities/:id when authenticated as a user with permission with a valid activity 1`] = `
Object {
  "alternatives": null,
  "contractorResources": Array [
    Object {
      "description": null,
      "end": null,
      "files": Array [
        Object {
          "id": 5002,
          "size": null,
        },
      ],
      "hourlyData": Array [],
      "id": 4300,
      "name": null,
      "start": null,
      "useHourly": false,
      "years": Array [],
    },
  ],
  "costAllocation": Array [],
  "costAllocationNarrative": Object {
    "methodology": null,
    "otherSources": null,
  },
  "description": "updated description",
  "expenses": Array [],
  "files": Array [
    Object {
      "id": 5000,
      "in": "here",
      "size": null,
      "some": "metadata",
    },
    Object {
      "id": 5004,
      "size": null,
    },
  ],
  "fundingSource": null,
  "goals": Array [
    Object {
      "description": "Be a super successful artist",
      "id": 4200,
      "objective": "Paint a pretty picture",
    },
    Object {
      "description": "Win a Nobel prize for physics",
      "id": 4201,
      "objective": "Discover a new particle",
    },
    Object {
      "description": "Go on Ellen",
      "id": 4202,
      "objective": "Learn to dance",
    },
  ],
  "id": 4100,
  "name": "updated name",
  "plannedEndDate": "1963-06-16",
  "plannedStartDate": "1970-04-11",
  "quarterlyFFP": Array [],
  "schedule": Array [],
  "standardsAndConditions": null,
  "statePersonnel": Array [],
  "summary": null,
}
`;

exports[`APD activities endpoint | PUT /activities/:id when authenticated as a user with permission with an activity name that already exists for the APD 1`] = `
Object {
  "action": "update-activity",
  "error": "activity-name-exists",
}
`;

exports[`APD activities endpoint | PUT /activities/:id when authenticated as a user with permission with an activity on an APD in a state other than the user's state 1`] = `undefined`;

exports[`APD activities endpoint | PUT /activities/:id when authenticated as a user with permission with an empty activity name 1`] = `
Object {
  "action": "update-activity",
  "error": "activity-name-invalid",
}
`;
